--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="author" content="">
   <link rel="icon" href="../../../../favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="public/stylesheets/albumBootstrap.css">
-  <link rel="stylesheet" href="public/stylesheets/album.css">
-  <link rel="stylesheet" href="public/stylesheets/addAlbum.css">
+  <link rel="stylesheet" href="/stylesheets/albumBootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/album.css">
+  <link rel="stylesheet" href="/stylesheets/addAlbum.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="public/javascripts/p5.js"></script>
-  <script src="public/javascripts/addons/p5.dom.min.js"></script>
-  <script src="public/javascripts/addons/p5.sound.min.js"></script>
+  <script src="/javascripts/p5.js"></script>
+  <script src="/javascripts/addons/p5.dom.min.js"></script>
+  <script src="/javascripts/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -77,10 +77,10 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/c0zJ9J/2018_07_22_7_06_49.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JULY 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/textfinder.html"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a>
+                  <small
+                          class="text-muted">JULY 2018</small>
+                </div>
               </div>
             </div>
           </div>
@@ -88,10 +88,10 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/crYpGy/2018_07_22_5_56_08.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/jsonfilter.html"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a>
+                  <small
+                          class="text-muted">JUNE 2018</small>
+                </div>
               </div>
             </div>
           </div>
@@ -99,10 +99,10 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/g5Gy9J/2018_07_22_7_03_06.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/calculator.html"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a>
+                  <small
+                          class="text-muted">JUNE 2018</small>
+                </div>
               </div>
             </div>
           </div>
@@ -110,10 +110,7 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/eMr9Gy/2018_07_22_5_55_12.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a><small class="text-muted">JUNE 2018</small></div>
               </div>
             </div>
           </div>
@@ -121,10 +118,10 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/iVmtby/2018_07_22_5_54_35.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/firebase.html"><button class="btn btn-sm btn-outline-secondary width" href="https://sooojungee.github.io/public/views/instagram.html" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a>
+                  <small
+                          class="text-muted">JUNE 2018</small>
+                </div>
               </div>
             </div>
           </div>
@@ -132,10 +129,10 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/jeFpid/2018_07_22_5_53_59.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button>
-                    <!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit-->
-                  </div><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/instagram.html"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a>
+                  <small
+                          class="text-muted">JUNE 2018</small>
+                </div>
               </div>
             </div>
           </div>
@@ -151,10 +148,7 @@
     </div>
   </footer>
 </div>
-<script src="public/javascripts/album-test.js"></script>
+<script src="/javascripts/album-test.js"></script>
 </body>
 
 </html>
-
-
-
