--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="author" content="">
   <link rel="icon" href="../../../../favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/stylesheets/albumBootstrap.css">
-  <link rel="stylesheet" href="/stylesheets/album.css">
-  <link rel="stylesheet" href="/stylesheets/addAlbum.css">
+  <link rel="stylesheet" href="public/stylesheets/albumBootstrap.css">
+  <link rel="stylesheet" href="public/stylesheets/album.css">
+  <link rel="stylesheet" href="public/stylesheets/addAlbum.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="/javascripts/p5.js"></script>
-  <script src="/javascripts/addons/p5.dom.min.js"></script>
-  <script src="/javascripts/addons/p5.sound.min.js"></script>
+  <script src="public/javascripts/p5.js"></script>
+  <script src="public/javascripts/addons/p5.dom.min.js"></script>
+  <script src="public/javascripts/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -148,7 +148,7 @@
     </div>
   </footer>
 </div>
-<script src="/javascripts/album-test.js"></script>
+<script src="public/javascripts/album-test.js"></script>
 </body>
 
 </html>
