--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="card mb-4 box-shadow"><img class="card-img-top padding-8" src="https://preview.ibb.co/eMr9Gy/2018_07_22_5_55_12.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center"><a class="btn-group"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a><small class="text-muted">JUNE 2018</small></div>
+                <div class="d-flex justify-content-between align-items-center"><a class="btn-group" href="https://sooojungee.github.io/public/views/kakaologin.html"><button class="btn btn-sm btn-outline-secondary width" type="button">View</button><!--button.btn.btn-sm.btn-outline-secondary(type='button') Edit--></a><small class="text-muted">JUNE 2018</small></div>
               </div>
             </div>
           </div>
