--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="navbar navbar-dark box-shadow blue-color">
-      <div class="container d-flex justify-content-between"><a class="navbar-brand d-flex align-items-center" href="https://sooojungee.github.io/"><!--svg.mr-2(xmlns='http://www.w3.org/2000/svg', width='20', height='20', viewbox='0 0 24 24', fill='none', stroke='currentColor', stroke-width='2', stroke-linecap='round', stroke-linejoin='round')//path(d='M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z')
+      <div class="container d-flex justify-content-between"><a class="navbar-brand d-flex align-items-center" href="#"><!--svg.mr-2(xmlns='http://www.w3.org/2000/svg', width='20', height='20', viewbox='0 0 24 24', fill='none', stroke='currentColor', stroke-width='2', stroke-linecap='round', stroke-linejoin='round')//path(d='M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z')
 //circle(cx='12', cy='13', r='4')-->
         <div class="i material-icons">home</div>
         <strong>Blog</strong></a>
@@ -63,7 +63,7 @@
     </section>
     <div class="album py-5 bg-light main-content">
       <div class="container background-color">
-        <div class="row height-auto" id="row"></div>
+        <div class="row" id="row"></div>
       </div>
     </div>
   </main>
@@ -75,6 +75,6 @@
   </footer>
 </div>
 <script src="public/javascripts/album-test.js"></script>
-<script src="public/javascripts/blog.js"></script>
+<script src="public/javascripts/blog-new.js"></script>
 </body>
 </html>
