--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="public/stylesheets/albumBootstrap.css">
   <link rel="stylesheet" href="public/stylesheets/album.css">
   <link rel="stylesheet" href="public/stylesheets/addAlbum.css">
-  <!--<link rel="stylesheet" href="public/stylesheets/progress.css">-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
           integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script src="public/javascripts/p5.js"></script>
   <script src="public/javascripts/addons/p5.dom.min.js"></script>
   <script src="public/javascripts/addons/p5.sound.min.js"></script>
